# Lens1

./: .replit  README.md  data_preprocessor.py  pyproject.toml  replit.md
attached_assets/: Pasted-Act-as-an-expert-React-js-developer-Your-task-is-to-create-the-main-UI-structure-for-the-AquaLense-1758563576743_1758563576743.txt  Pasted-Act-as-an-expert-React-js-developer-Your-task-is-to-integrate-the-React-frontend-with-our-FastAPI--1758564022170_1758564022170.txt  Pasted-Act-as-an-expert-React-js-developer-Your-task-is-to-restructure-the-boilerplate-Vite-React-project-1758562301640_1758562301640.txt  Pasted-Act-as-an-expert-React-js-developer-specializing-in-data-visualization-with-Mapbox-and-Recharts-Yo-1758564714965_1758564714965.txt  Pasted-branch-main-set-up-to-track-origin-main-venv-PS-D-Sigma6-0-SIH-Final-Lens-Lens-LensClone-b-1758560282993_1758560282994.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: __init__.py  health.py  recommendations.py
backend/app/core/: ahp_engine.py
data/: clean_anantpur_data.csv  messy_anantpur_data.csv
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/api/: apiService.js
frontend/src/components/: ChartComponent.jsx  DashboardLayout.css  DashboardLayout.jsx  MapComponent.jsx
frontend/src/pages/: Dashboard.jsx
