[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AquaLense API - Groundwater Analysis Backend"
authors = ["AquaLense Team <team@aqualense.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
